--- a/application-test.properties
+++ b/application-test.properties
@@ -1,2 +1,3 @@
 #Write by scca, more information see : https://github.com/dyc87112/spring-cloud-config-admin
-#Tue Dec 25 12:41:03 CST 2018
+#Tue Dec 25 12:42:39 CST 2018
+url=123123
