--- a/application-test.properties
+++ b/application-test.properties
@@ -1,3 +1,4 @@
 #Write by scca, more information see : https://github.com/dyc87112/spring-cloud-config-admin
 #Tue Dec 25 12:45:03 CST 2018
 url=123123
+mq.cluster=10.3.2.32
